disable homebrew and AUR pipeline

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -208,7 +208,8 @@ jobs:
   aur-publish:
     name: Build & publish to AUR
     needs: release
-    if: ${{ !contains(github.ref, 'pre') }}
+    # no AUR publish.
+    if: ${{ false && !contains(github.ref, 'pre') }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
